--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -2,24 +2,18 @@
 
     main {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 2fr 2fr 1fr;
+    }
+
+    .container {
+        grid-column: 1 / 5;
     }
 
     .currentevents {
-        grid-column: 1 / 2;
+        grid-column: 2 / 3;
         text-align: center;
         border: 1px solid black;
         background-color: #c2c2c2;
-        
-    }
-    
-    .calltoaction {
-        grid-column: 2/3;
-        margin: 10%;
-        padding: 10px;
-        border: 1px solid black;
-        margin-bottom: 20%;
-        background-color: #70A9A1;
         
     }
     
@@ -31,11 +25,9 @@
     }
     
     .companyads {
-        grid-column: 2 / 3;
+        grid-column: 1 / 5;
         text-align: center;
         border: 1px solid black;
-        margin: -13%;
-        margin-bottom: 13%;
         background-color: #8FBCCC;
     }
 
@@ -43,17 +35,14 @@
         display: none; /* hide hamburger button */
     }
 
-    .navigationbar {
+    /* .navigationbar {
         display: inline-flex;
         list-style-type: none;
         text-align: left;
         margin-left: 50px;
-        }
+        } */
 
-    .darkmode {
-        right: 1%;
-        top: 3%;
-    }
+    
 
     .label p::before {
         content: "Large";
@@ -80,5 +69,13 @@
         grid-column: 1/4;
         padding: 1rem 1rem 0 1rem;
         text-align: center;
+    }
+
+    form {
+        font-size: 20px;
+    }
+
+    #membershipbenefits {
+        font-size: 20px;
     }
 }
