--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -5,53 +5,59 @@
         grid-template-columns: 1fr 1fr;
     }
 
+    h1 {
+        font-size: 2rem;
+    }
+
     .currentevents {
         grid-column: 1 / 2;
-        text-align: center;
-        border: 1px solid black;
-        background-color: #c2c2c2;
+        /* text-align: center; */
+        /* border: 1px solid black; */
+        /* background-color: #c2c2c2; */
         
     }
 
-    .calltoaction {
-        grid-column: 2/3;
-        margin: 10%;
-        padding: 10px;
-        border: 1px solid black;
-        margin-bottom: 20%;
-        background-color: #70A9A1;
-        
+    .darkmode {
+        right: 5px;
+        top: 5px;
     }
 
     .weathercard {
-        grid-column: 1/2;
+        grid-column: 2/3;
         text-align: center;
         border: 1px solid black;
         background-color: #c2c2c2;
     }
 
     .companyads {
-        grid-column: 2 / 3;
-        text-align: center;
-        border: 1px solid black;
-        margin: -13%;
-        margin-bottom: 13%;
-        background-color: #8FBCCC;
+        grid-column: 1 / 3;
+        /* text-align: center;
+        border: 1px solid black; */
+        /* margin: -13%; */
+        /* margin-bottom: 13%; */
+        /* background-color: #8FBCCC; */
     }
 
     #menu {
         display: none; /* hide hamburger button */
     }
 
+    nav {
+        background-color: #1f363d;
+        padding: 10px;
+    }
+
     .navigationbar {
-    list-style-type: none;
-    text-align: left;
-    margin-right: 50px;
+        list-style-type: none;
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+        /* width: 100%; */
     }
 
     .navigationbar:first-child li{
         display: inline;
-        padding: 20px;
+        /* padding: 20px; */
     }
 
     .navigationbar:first-child a:link {
@@ -100,5 +106,19 @@
         grid-column: 1/3;
         padding: 1rem 1rem 0 1rem;
         text-align: center;
+    }
+
+    header .headerimg {
+        width: 150px;
+    }
+
+    .card p, .item p, .item a {
+        min-height: 6px;
+        font-size: 1rem;
+        
+    }
+
+    #membershipbenefits {
+        font-size: 10px;
     }
 }
